# packages/library-app/src/routers/books.ts
@@ -9,7 +9,7 @@ export const BookUpsertSchema = z.object({
   barcode: z.string().nullable().optional(),
   price: z.number().nullable().optional(),
   language: z.string().nullable().optional(),
-  genderIds: z.array(z.number()).optional(),
+  genreIds: z.array(z.number()).optional(),
   publisherId: z.number().nullable().optional(),
 });
 
@@ -19,7 +19,7 @@ export const BookListQuerySchema = z.object({
   title: z.string().optional(),
   author: z.string().optional(),
   publisherId: z.number().optional(),
-  genderId: z.number().optional(),
+  genreId: z.number().optional(),
 });
 
 export const booksRouter = router({
